Ответ.yaml
#-------------------------------------------------------------
# Manifest File to create Deployment with Labels and AutoScaling
#
# Copyleft (c) by Nick Burakovets
#-------------------------------------------------------------
---
apiVersion : apps/v1
kind: Deployment
# Указываем название деплоя
metadata:
  name: my-web-deployment-autoscaling
  labels:
    app  : my-k8s-application
    env  : prod
    owner: NickBurakovets
spec:
  selector:
    matchLabels:
      project: supprod
  template:
    metadata:
      labels:
        project: supprod
    spec:
    # Берём готовый имидж с докер хаба и вывод делаем на 80 порт
      containers:
        - name : supprod-web
          image: nickolit/k8sphp:version=latest
          ports:
            - containerPort: 80
