Ingress-hosts.yaml
#------------------------------------
#
# Подключаем ингресс контроллер 
# и по нодам раскидываем приложение
#
#------------------------------------
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: ingress-hosts
spec: 
  rules: 
    - 
      host: web1.mindbox.net
      http: 
        paths: 
          - 
            backend: 
              serviceName: web1
              servicePort: 80
    - 
      host: web2.mindbox.net
      http: 
        paths: 
          - 
            backend: 
              serviceName: web2
              servicePort: 80
    - 
      host: web3.mindbox.net
      http: 
        paths: 
          - 
            backend: 
              serviceName: web3
              servicePort: 80
    - 
      host: web4.mindbox.net
      http: 
        paths: 
          - 
            backend: 
              serviceName: web4
              servicePort: 80
    - 
      host: web5.mindbox.net
      http: 
        paths: 
          - 
            backend: 
              serviceName: web5
              servicePort: 80
